# ocaml-qrcode

./: LICENSE  dune-project  ocaml-qrcode.opam
src/: dune  main.ml
src/core/: bit_stream.ml  bit_stream.mli  code_word.ml  code_word.mli  count_indicator.ml  count_indicator.mli  dune  error_correction.ml  error_correction_level.ml  format_information.ml  function_module.ml  mask.ml  mask.mli  metadata.ml  metadata.mli  mode.ml  mode.mli  module_matrix.ml  reed_solomon_coding.ml  rs_polynomial.ml  rs_polynomial.mli  rs_symbol.ml  rs_symbol.mli  segment.ml  segment.mli  segment_decoders.ml  segment_decoders.mli  segment_encoder.ml  segment_encoders.ml  segment_encoders.mli  segment_number_encoder.ml  segment_number_encoder.mli  std.ml  type.ml  version.ml  version_information.ml
src/encoder/: dune  encoder_intf.ml  module_encoder.ml  png_encoder.ml
test/core/: bit_stream_test.ml  code_word_test.ml  dune  format_information_test.ml  metadata_test.ml  mode_test.ml  ocaml_qrcode_core_test.ml  reed_solomon_coding_test.ml  rs_polynomial_test.ml  rs_symbol_test.ml  segment_decoders_test.ml  segment_encoders_test.ml  segment_number_encoder_test.ml  segment_test.ml  support.ml  support.mli  type_test.ml  version_information_test.ml
