opam-version: "2.0"
version: "0.0.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/ocaml-wasm"
bug-reports: "https://github.com/derui/ocaml-wasm"
dev-repo: "git+https://github.com/derui/ocaml-wasm"
synopsis: "WASM interpretor of OCaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0.0"}
  "alcotest" {with-test & < "2.0.0"}
  "ppx_deriving" { < "5.3.0"}
  "stdint" { < "0.8.0"}
  "uutf" {= "1.0.2"}
  "camlimages" { < "6.0.0"}
]
available: ["ocaml" >= "4.09.0"]
description: """
"""
